[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake = { version = "2.9.2", features = ["derive"] }
once_cell = "1.19.0"
rand = "0.8.5"
rayon = "1.9.0"

[dev-dependencies]
cucumber = "0.20"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "time"] }

[[test]]
name = "integration"
harness = false
